--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,6 @@
             <nav>
                 <a href="/work/">Work</a>
                 <a href="http://photos.danielzhao.com">Photos</a>
-                <a href="/bio/">Bio</a>
             </nav>
         </header>
         <main>
@@ -40,8 +39,7 @@
                 <a href="https://linkedin.com/in/iamdanzhao" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://github.com/iamdanzhao" class="fa fa-github" target="_blank"></a>
             </div>
-            <p><strong>© 2019 Daniel Zhao</strong></p>
+            <p><strong>© 2020 Daniel Zhao</strong> / <a href="/colophon/">Colophon</a>.</p>
         </footer>
-        <!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
     </body>
 </html>
