work page under construction
louisville page now uses jekyll, added link styling to links in footer as well

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
                 <a href="/">Daniel Zhao</a>
             </div>
             <nav>
-                <a href="/work/">Work</a>
+<!--                <a href="/work/">Work</a>-->
                 <a href="http://photos.danielzhao.com">Photos</a>
             </nav>
         </header>
@@ -39,7 +39,7 @@
                 <a href="https://linkedin.com/in/iamdanzhao" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://github.com/iamdanzhao" class="fa fa-github" target="_blank"></a>
             </div>
-            <p><strong>© 2020 Daniel Zhao</strong> / <a href="/colophon/">Colophon</a>.</p>
+            <p><strong>© 2020 Daniel Zhao</strong> / <a href="/colophon/">Colophon</a></p>
         </footer>
     </body>
 </html>
