--- a/styles/main.css
+++ b/styles/main.css
@@ -220,10 +220,6 @@ ol li > * {
     margin: 0;
 }
 
-.list-bold li {
-    font-weight: bold;
-}
-
 .list-plus,
 .list-arrows {
     padding-left: 40px;
@@ -248,6 +244,10 @@ ol li > * {
     content: "→";
 }
 
+.list-bold {
+    font-weight: bold;
+}
+
 .list-bar {
     padding-left: 0;
     margin-top: 12px;
@@ -259,6 +259,7 @@ ol li > * {
     display: inline;
     padding: .25em .5em;
     color: white;
+    text-indent: -1.3125em;
 }
 
 .list-bar.actions li {
