more templates, test blog post

--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -9,7 +9,7 @@
             gtag('config', 'UA-144726595-1');
         </script>        
         <meta charset="utf-8">
-        <title>{{ page.title }}</title>
+        <title>{{ page.title }} / Daniel Zhao</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link href="/styles/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,300,400,400i,500,600&display=swap" rel="stylesheet">
@@ -22,8 +22,7 @@
                 <a href="/">Daniel Zhao</a>
             </div>
             <nav>
-<!--                <a href="/work/">Work</a>-->
-                <a href="http://photos.danielzhao.com">Photos</a>
+                {% include nav.html}
             </nav>
         </header>
         <main>
