--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -22,7 +22,7 @@
                 <a href="/">Daniel Zhao</a>
             </div>
             <nav>
-                {% include nav.html}
+                {% include nav.html %}
             </nav>
         </header>
         <main>
