--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,11 +29,11 @@
             <div id="gradient-top"></div>
             <div id="gradient-bottom"></div>
             <div class="wide">
-                <a href=""><strong>← Back to all posts</strong></a>
+                <a href="/blog/"><strong>← Back to all posts</strong></a>
                 <h1>{{ page.title }}</h1>
-                <div>
+                <div class="byline">
                     <span class="byline-author">{{ page.author }}</span>
-                    <span class="byline-date">{{ page.date }}</span>
+                    <span class="byline-date">{{ page.date | "%B %-d %Y"}}</span>
                 </div>
                 {{ content }}
             </div>
