--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -33,7 +33,7 @@
                 <h1>{{ page.title }}</h1>
                 <div class="byline">
                     <span class="byline-author">{{ page.author }}</span>
-                    <span class="byline-date">{{ page.date | "%B %-d %Y"}}</span>
+                    <span class="byline-date">{{ page.date | date: "%B %-d, %Y"}}</span>
                 </div>
                 {{ content }}
             </div>
