--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,7 @@ footer a:not(.button):not(.arrow):hover {
     transition: all 0.25s;
 }
 
+/*
 code {
     font-family: 'IBM Plex Mono', Consolas, 'Courier New', monospace;
     padding: 2px 4px;
@@ -51,6 +52,7 @@ code {
     background-color: #f9f2f4;
     border-radius: 4px;
 }
+*/
 
 h1,
 h2, 
@@ -623,6 +625,7 @@ main {
 .byline-author {
     text-transform: uppercase;
     font-weight: 600;
+    padding-right: 0.5em;
 }
 
 .byline-date {
