--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -29,7 +29,7 @@
             <div id="gradient-top"></div>
             <div id="gradient-bottom"></div>
             <div class="wide">
-                <a href="/blog/"><strong>← Back to all posts</strong></a>
+                <a href="/writing/"><strong>← Back to all posts</strong></a>
                 <h1>{{ page.title }}</h1>
                 <div class="byline">
                     <span class="byline-author">{{ page.author }}</span>
