--- a/styles/main.css
+++ b/styles/main.css
@@ -493,6 +493,15 @@ main {
 }
 
 .home-pills {
+    margin-top: 2.5em;
+    text-transform: uppercase;
+    font-size: 90%;
+    font-weight: 700;
+/*    color: gray;*/
+}
+
+/*
+.home-pills {
     display: inline-block;
     margin-top: 1.5em;
     padding: 0.25em 0.75em;
@@ -503,7 +512,7 @@ main {
     font-weight: 700;
     border-radius: 3px;
 }
-
+*/
 
 .home-image {
     object-fit: cover;
