fix homepage styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -480,7 +480,7 @@ main {
     font-size: 175%;
     line-height: 150%;
     font-weight: bold;
-    letter-spacing: -0.25em;
+    letter-spacing: -0.25px;
 }
 
 .home-blurb {
