--- a/styles/main.css
+++ b/styles/main.css
@@ -65,12 +65,18 @@ h4 {
 
 h1 {
     font-weight: 600;
-    font-size: 300%;
+    font-size: 400%;
+    border-bottom: 1px dotted var(--color-slate);
 }
 
 h2 {
     margin-top: 1em;
-    line-height: 140%;
+    line-height: 190%;
+    font-size: 200%;
+}
+
+h3 {
+    font-size: 145%;
 }
 
 h4 {
