more style changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
 :root {
     --color-blue: #0083ff;
     --color-pink: #ff5470;
-    --color-slate: #273142;
+    --color-slate: #415869;
 }
 
 /* MAIN STYLES */
@@ -84,6 +84,7 @@ h4 {
     text-transform: uppercase;
     margin-top: 1.5em;
     margin-bottom: 1em;
+    color: var(--color-slate);
 }
 
 @media screen and (max-width: 640px) {
@@ -489,6 +490,8 @@ main {
 .intro h2 {
     font-weight: 400;
     line-height: 145%;
+    font-size: 150%;
+    border: none;
 }
 
 #bio-prof-pic {
