--- a/styles/main.css
+++ b/styles/main.css
@@ -70,9 +70,7 @@ h1 {
 
 h2 {
     margin-top: 1em;
-    line-height: 190%;
     font-size: 200%;
-    border-bottom: 1px dotted var(--color-slate);
 }
 
 h3 {
@@ -176,6 +174,12 @@ nav a {
     margin: 1em;
 }
 
+@media screen and (max-width: 360px) {
+    nav a {
+        margin: 1em 0.5em;   
+    }
+}
+
 footer {
     padding: 0 auto;
     display: flex;
@@ -211,6 +215,16 @@ footer > * {
     
     nav a:first-child{
         margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    footer {
+        display: block;
+    }
+    
+    footer .icon-bar {
+        margin-bottom: 15px;
     }
 }
 
@@ -276,6 +290,13 @@ ol li > * {
     padding: .25em .5em;
     color: white;
     text-indent: -1.3125em;
+}
+
+@media screen and (max-width: 360px) {
+    .list-bar li {
+        padding: .25em .25em;
+        font-size: 90%;
+    }
 }
 
 .list-bar.actions li {
@@ -560,6 +581,7 @@ main {
     margin-left: 3px;
     text-decoration: none;
     transition: all 0.25s ease-in-out;
+    white-space: nowrap;
 }
 
 .inline-label-github:hover,
