sticky navbar in work page

--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -48,5 +48,6 @@
             </div>
             <p><strong>© 2021 Daniel Zhao</strong></p>
         </footer>
+        <script src="/styles/sticky.js" type="text/javascript"></script>
     </body>
 </html>
