--- a/styles/main.css
+++ b/styles/main.css
@@ -17,33 +17,10 @@ body {
     background-color: var(--color-offwhite);
 }
 
-img {
-    width: 100%;
-    border: none;
-    position: relative;
-    display: block;
-    z-index: 2000;
-    margin-top: 1em;
-}
-
-main a:not(.button):not(.fa):not(.arrow),
-footer a:not(.button):not(.fa):not(.arrow){
-    padding-left: 2px;
-    padding-right: 2px;
-    color: black;
-    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(65%, transparent), color-stop(65%, rgba(0, 131, 255, 0.2)), to(rgba(0, 131, 255, 0.2)));
-    background: linear-gradient(to bottom, transparent 0, transparent 65%, rgba(0, 131, 255, 0.2) 65%, rgba(0, 131, 255, 0.2) 100%);
-    text-decoration: none;
-    transition: color 0.5s ease-in-out;
-}
-
-main a:not(.button):not(.arrow):focus,
-main a:not(.button):not(.arrow):hover,
-footer a:not(.button):not(.arrow):focus,
-footer a:not(.button):not(.arrow):hover {
-    background: var(--color-blue);
-    color: white;
-    transition: all 0.25s;
+@media screen and (max-width: 640px) {
+    body {
+        font-size: 95%;
+    }
 }
 
 code {
@@ -54,6 +31,30 @@ code {
     background-color: #f9f2f4;
     border-radius: 4px;
 }
+
+/***** Links */
+
+main a:not(.button):not(.fa),
+footer a:not(.button):not(.fa){
+    padding-left: 2px;
+    padding-right: 2px;
+    color: black;
+    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(65%, transparent), color-stop(65%, rgba(0, 131, 255, 0.2)), to(rgba(0, 131, 255, 0.2)));
+    background: linear-gradient(to bottom, transparent 0, transparent 65%, rgba(0, 131, 255, 0.2) 65%, rgba(0, 131, 255, 0.2) 100%);
+    text-decoration: none;
+    transition: color 0.5s ease-in-out;
+}
+
+main a:not(.button):focus,
+main a:not(.button):hover,
+footer a:not(.button):focus,
+footer a:not(.button):hover {
+    background: var(--color-blue);
+    color: white;
+    transition: all 0.25s;
+}
+
+/***** Headers */
 
 h1,
 h2, 
@@ -86,21 +87,28 @@ h4 {
     color: var(--color-slate);
 }
 
-@media screen and (max-width: 640px) {
-    body {
-        font-size: 95%;
+@media screen and (max-width: 768px) {
+    h1, h2 {
+        padding-bottom: 0;
     }
-    
+}
+
+@media screen and (max-width: 640px) {    
     .quarter > h4:first-child,
     .half > h4:first-child {
         margin-top: 1.5em;
     }
 }
 
-@media screen and (max-width: 768px) {
-    h1, h2 {
-        padding-bottom: 0;
-    }
+/***** Images */
+
+img {
+    width: 100%;
+    border: none;
+    position: relative;
+    display: block;
+    z-index: 2000;
+    margin-top: 1em;
 }
 
 .caption {
@@ -108,14 +116,7 @@ h4 {
     line-height: 1.5em;
 }
 
-.description {
-    font-size: 95%;
-    line-height: 1.5em;
-}
-
-a.anchor {
-    padding: 0 !important;
-}
+/***** Colors */
 
 .blue {
     color: var(--color-blue);
@@ -131,11 +132,6 @@ a.anchor {
     color: white;
     font-weight: bold;
     background-color: var(--color-pink);
-}
-
-.small-text {
-    font-size: 70%;
-    display: inline;
 }
 
 /* HEADER and FOOTER STYLES */
@@ -364,7 +360,6 @@ ol li > * {
 }
 
 
-
 /* LAYOUT: CONTAINERS*/
 
 main {
@@ -482,6 +477,8 @@ main {
     }
 }
 
+/* ELEMENTS: SEPARATOR */
+
 .sep:before {
     content: "";
     display: block;
@@ -489,8 +486,7 @@ main {
     width: 100px;
     left: -1.5em;
     height: 1px;
-    /* border-bottom: 2px solid var(--color-slate); */
-    border-bottom: 2px solid rgba(39, 49, 66, 0.5);
+    border-bottom: 2px solid var(--color-slate);
 }
 
 @media screen and (max-width: 640px) {
@@ -524,18 +520,39 @@ main {
     margin-right: 30px;
 }
 
-/* ELEMENTS: SOCIAL LINKS */
+/* ELEMENTS: GRADIENT */
 
-.social-links-prof span {
+#gradient-top {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    z-index: 1000;
+    position: fixed;
     display: block;
-    margin: .25em 0;
+    background: -webkit-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
+    background: -o-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
+    background: -moz-linear-gradient(rgba(255,255,250,1), rgba(255,255,255,0));
+    background: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
 }
 
-.social-links-prof span .fa {
-    margin-right: 1em;
+#gradient-bottom {
+    width: 100%;
+    height: 150px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    position: fixed;
+    display: block;
+    background: -webkit-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
+    background: -o-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
+    background: -moz-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
+    background: linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
 }
 
-/* PAGE STYLES: HOME */
+/* PAGE STYLES: HOMEPAGE */
+
+/***** Intro block */
 
 .intro {
     padding-bottom: calc(2vh + 1vw);
@@ -559,6 +576,26 @@ main {
     border: none;
 }
 
+@media screen and (max-width: 480px) {
+    .intro h1 {
+        margin-bottom: 0.5em;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .intro h1 {
+        font-size: 325%;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .intro h1 {
+        font-size: 300%;
+    }
+}
+
+/***** Headshot */
+
 #bio-prof-pic {
     border-radius: 50%;
     width: 330px;
@@ -577,37 +614,57 @@ main {
 }
 
 @media screen and (max-width: 480px) {
-    .intro h1 {
-        margin-bottom: 0.5em;
-    }
-    
     #bio-prof-pic {
         width: 240px;
         margin-top: -160px;
     }
 }
 
-@media screen and (max-width: 420px) {
-    .intro h1 {
-        font-size: 325%;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    .intro h1 {
-        font-size: 300%;
-    }
-    
+@media screen and (max-width: 360px) {    
     #bio-prof-pic {
         width: 200px;
         margin-top: -180px;
     }
 }
 
-.home-image {
-    object-fit: cover;
-    height: 560px;
-    margin-bottom: 4em;
+/***** Photo preview containers */
+
+.photo-container {
+    position: relative;
+    text-align: center;
+    color: white;
+    margin-top: 0.75em;
+    margin-bottom: 0.75em;
+    -webkit-filter: brightness(100%);
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.photo-container:hover {
+    -webkit-filter: brightness(70%);
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.photo-container img {
+    border-radius: 8px;
+    margin-top: 0;
+}
+
+.photo-container div {
+    position: absolute;
+    top: 1em;
+    left: 1em;
+    z-index: 10000;
+    color: white;
+    font-size: 160%;
+    font-weight: 600;
 }
 
 /* PAGE STYLES: WORK */
@@ -691,85 +748,4 @@ main {
 
 .byline-date {
     color: #666;
-}
-
-/* PAGE STYLES: GRADIENT */
-
-#gradient-top {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 150px;
-    z-index: 1000;
-    position: fixed;
-    display: block;
-    background: -webkit-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
-    background: -o-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
-    background: -moz-linear-gradient(rgba(255,255,250,1), rgba(255,255,255,0));
-    background: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
-}
-
-#gradient-bottom {
-    width: 100%;
-    height: 150px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    position: fixed;
-    display: block;
-    background: -webkit-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
-    background: -o-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
-    background: -moz-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
-    background: linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
-}
-
-/* MISC */
-
-.inset.photo-cover .photo-text {
-    position: absolute;
-    max-width: 480px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2003;
-    color: white;
-    text-align: center;
-}
-
-.photo-preview .half {
-    -webkit-filter: brightness(100%);
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.photo-preview .half:hover {
-    -webkit-filter: brightness(70%);
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.photo-preview img {
-    border-radius: 8px;
-}
-
-.photo-container {
-    position: relative;
-    text-align: center;
-    color: white;
-}
-
-.photo-text {
-    position: absolute;
-    top: 1em;
-    left: 1em;
-    z-index: 10000;
-    color: white;
-    font-size: 150%;
-    font-weight: 600;
 }
