--- a/styles/main.css
+++ b/styles/main.css
@@ -649,7 +649,7 @@ main {
     z-index: 10000;
     color: white;
     font-size: 175%;
-    font-family: 'IBM Plex Sans Condensed'
+    font-family: 'IBM Plex Sans Condensed';
     font-weight: 600;
 }
 
