--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<a href="/work/">Work</a>
+<!-- <a href="/work/">Work</a> -->
 <a href="http://photos.danielzhao.com">Photos</a>
-<a href="/writing/">Writing</a>
-<a href="/about/">About</a>
+<!-- <a href="/writing/">Writing</a> -->
+<!-- <a href="/about/">About</a> -->
