--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
+<a href="/">Home</a>
 <!-- <a href="/work/">Work</a> -->
 <a href="http://photos.danielzhao.com">Photos</a>
 <!-- <a href="/writing/">Writing</a> -->
