removed navbar; additions to homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,14 @@
         <link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
-        <header>
+        <!-- <header>                            commented out 1/20/2022 (maybe add back?)
             <div id="siteTitle">
                 <a href="/">Daniel Zhao</a>
             </div>
             <nav>
                 {% include nav.html %}
             </nav>
-        </header>
+        </header> -->
         <main>
             {{ content }}
         </main>
